syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";

message AbilityMixinCostStamina {
  bool is_swim = 1;
}
